Término da classe, db e formulario do Cadastro de Funcionarios

--- a/Projeto_LPRC5/View/FrmCadastroFuncionarios.resx
+++ b/Projeto_LPRC5/View/FrmCadastroFuncionarios.resx
@@ -121,7 +121,7 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="barbtnNovo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="barbtnnovofuncionario_click.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAACDcSURBVHhe7d0J1G1nXd9xyM0MmZgDBEhCGEyCTIpAEEII
@@ -1231,4 +1231,7 @@
         fxd/Ea+NP4hfiXbYf3l8UtwxJEln7MSJ/w/y92KUSaOyXgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>25</value>
+  </metadata>
 </root>
